More IE Bugs squished

--- a/js/jquery.jsytlightbox/jquery.jsytlightbox.css
+++ b/js/jquery.jsytlightbox/jquery.jsytlightbox.css
@@ -4,7 +4,8 @@ body {	height: 100%;
 }
 #jsyt_container {	width: 100%;
 					height: 100%;
-					background-color: rgba(0,0,0,0.9);
+					background-color: #000;
+ 					background-color: rgba(0,0,0,0.9); 
 					position: fixed;
 					top:0;
 					left:0;
@@ -50,4 +51,5 @@ body {	height: 100%;
 	position: absolute;
 	top: 20px;
 	right: 20px;
+	cursor: pointer;
 }
